Edit: добавил компоненты и натсроил стили

--- a/test-task/styles/componentStyles/Header.module.scss
+++ b/test-task/styles/componentStyles/Header.module.scss
@@ -1,6 +1,11 @@
 @import "../varibles.scss";
 
-.container{
+.container {
     background-color: $color-blue-deep;
     color: $color-white;
+    padding: 12px 20px;
+}
+
+.title {
+    width: 10%;
 }
