--- a/test-task/styles/Home.module.scss
+++ b/test-task/styles/Home.module.scss
@@ -1,5 +1,24 @@
+@import "./varibles.scss";
+
 .container {
-    padding: 0 2rem;
-    display: flex;
-    height: 100vh;
+    width: 100%;
+    padding: 20px 24px;
+}
+
+.top {
+    width: 100%;
+    padding: 20px 0px 20px 50px;
+}
+
+.title {
+    padding: 24px 0px 40px 12px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 16px;
+
+    letter-spacing: -0.2px;
+
+    color: $color-blue-deep;
 }
