--- a/test-task/styles/componentStyles/SideMenu.module.scss
+++ b/test-task/styles/componentStyles/SideMenu.module.scss
@@ -4,4 +4,30 @@
     background-color: $color-blue-deep;
     color: $color-white;
     padding: 12px 32px;
+    display: block;
+    & span{
+        display: block;
+    }
+}
+
+.h3 {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 22px;
+    cursor: pointer;
+    margin: 0;
+    padding: 0.6em 0;
+}
+
+.h4 {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 12px;
+    line-height: 16px;
+    cursor: pointer;
+    margin: 0;
+    padding: 0.6em 0;
 }
