--- a/test-task/styles/componentStyles/Navigation.module.scss
+++ b/test-task/styles/componentStyles/Navigation.module.scss
@@ -1,20 +1,25 @@
 @import "../varibles.scss";
 
+%shared {
+    padding: 12px 16px;
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    color: $color-black;
+    cursor: pointer;
+    user-select: none;
+}
+
 .nav {
-    & span {
-        padding: 12px 16px;
-        font-family: "Open Sans";
-        font-style: normal;
-        font-weight: 600;
-        font-size: 14px;
-        line-height: 20px;
-        color: $color-black;
-        cursor: pointer;
-        user-select: none;
+    &_inactive {
+        @extend %shared;
         border-bottom: 1px solid $color-gray-light;
     }
 
-    & span:active {
+    &_active {
+        @extend %shared;
         border-bottom: 4px solid $color-gray-deep;
     }
 }
