--- a/test-task/styles/componentStyles/Progress.module.scss
+++ b/test-task/styles/componentStyles/Progress.module.scss
@@ -42,3 +42,17 @@
     width: 100%;
     height: 2px;
 }
+
+.step_container {
+    display: flex;
+    &_ellipse {
+        width: 14px;
+        height: 14px;
+        background-color: $color-gray-light;
+    }
+    &_line {
+        width: 100%;
+        height: 2px;
+        background-color: $color-gray-light;
+    }
+}
