--- a/test-task/styles/componentStyles/CustomGrid.module.scss
+++ b/test-task/styles/componentStyles/CustomGrid.module.scss
@@ -12,4 +12,15 @@
         letter-spacing: -0.2px;
         color: $color-gray-deep;
     }
+    &_row {
+        display: flex;
+        font-family: "Open Sans";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: center;
+        letter-spacing: -0.2px;
+        color: $color-gray-deep;
+    }
 }
