--- a/test-task/styles/componentStyles/CustomGrid.module.scss
+++ b/test-task/styles/componentStyles/CustomGrid.module.scss
@@ -24,3 +24,31 @@
         color: $color-gray-deep;
     }
 }
+
+.table {
+    font-family: "Open Sans";
+    font-style: normal;
+    font-weight: 400;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+.td {
+    padding: 16px 12px;
+    text-align: center;
+    border-bottom: 1px solid $color-gray-deep;
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: -0.2px;
+    color: $color-gray-deep;
+}
+
+.tr {
+    padding: 16px 12px;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    letter-spacing: -0.2px;
+    color: $color-gray-deep;
+    border-bottom: 1px solid $color-gray-light;
+}
