--- a/test-task/styles/globals.scss
+++ b/test-task/styles/globals.scss
@@ -16,6 +16,9 @@ a {
 
 * {
     box-sizing: border-box;
+    font-family: "Open Sans";
+    font-style: normal;
+    letter-spacing: -0.2px;
 }
 
 @media (prefers-color-scheme: dark) {
