Edit: финальные правки

--- a/test-task/styles/componentStyles/Layout.module.scss
+++ b/test-task/styles/componentStyles/Layout.module.scss
@@ -1,5 +1,10 @@
 @import "../varibles.scss";
 
 .container {
+    height: 100%;
     display: flex;
+
+    &_content {
+        width: 100%;
+    }
 }
