--- a/test-task/styles/componentStyles/SideMenu.module.scss
+++ b/test-task/styles/componentStyles/SideMenu.module.scss
@@ -1,10 +1,12 @@
 @import "../varibles.scss";
 
 .container {
+    min-height: 100vh;
     background-color: $color-blue-deep;
     color: $color-white;
     padding: 12px 32px;
     display: block;
+
     & span{
         display: block;
     }
